--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+body {
+  background-color: aquamarine;
+  margin: 0;
   min-height: 100vh;
+}
+* {
+  box-sizing: border-box;
+}
+
+.display {
+  background-color: #fff;
+  border-radius: 4px;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  width: 360px;
+  justify-content: center;
+  align-items: center;
+}
+.box {
+  border: 2px solid #333;
+  border-radius: 4px;
+  margin: 10px;
+  height: 100px;
+  font-size: 60px;
+  width: 100px;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  display: flex;
 }
