--- a/src/App.css
+++ b/src/App.css
@@ -1,29 +1,38 @@
-body {
-  background-color: aquamarine;
-  margin: 0;
-  min-height: 100vh;
-}
 * {
   box-sizing: border-box;
 }
 
+body {
+  background-color: rgb(103, 103, 179);
+  margin: 0;
+  min-height: 100vh;
+}
 .display {
-  background-color: #fff;
-  border-radius: 4px;
   display: flex;
   flex-wrap: wrap;
-  width: 360px;
+  width: 350px;
+  border-radius: 4px;
+  background-color: white;
+  margin-top: 200px;
   justify-content: center;
   align-items: center;
 }
+
 .box {
-  border: 2px solid #333;
-  border-radius: 4px;
-  margin: 10px;
-  height: 100px;
-  font-size: 60px;
-  width: 100px;
+  border: 2px solid rgb(36, 35, 35);
+  border-radius: 5px;
+  display: flex;
+  font-size: 30px;
+  height: 70px;
+  background-color: blueviolet;
   align-items: center;
   justify-content: center;
-  display: flex;
+  width: 70px;
+  margin: 10px;
+  cursor: pointer;
+  user-select: none;
+}
+.box:active {
+  opacity: 0.8;
+  transform: scale(0.95);
 }
