--- a/src/App.css
+++ b/src/App.css
@@ -31,8 +31,9 @@ body {
   margin: 10px;
   cursor: pointer;
   user-select: none;
+  transition: all 500ms ease-in-out;
 }
 .box:active {
   opacity: 0.8;
-  transform: scale(0.95);
+  transform: scale(1.2) rotate(20deg);
 }
