--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,12 @@ body {
   justify-content: center;
   align-items: center;
 }
-
+.display h1 {
+  height: 50px;
+  width: 270px;
+  text-align: center;
+  font-size: 2rem;
+}
 .drum-pad {
   border: 2px solid rgb(36, 35, 35);
   border-radius: 5px;
