--- a/src/App.css
+++ b/src/App.css
@@ -36,9 +36,13 @@ body {
   margin: 10px;
   cursor: pointer;
   user-select: none;
-  transition: all 500ms ease-in-out;
+  transition: all 400ms ease-in-out;
 }
 .drum-pad:active {
   opacity: 0.8;
   transform: scale(1.2) rotate(20deg);
+}
+
+.drum-pad:hover {
+  color: rgb(211, 175, 245);
 }
