--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  background-color: rgb(103, 103, 179);
+  background-color: rgb(154, 154, 231);
   margin: 0;
   min-height: 100vh;
 }
@@ -12,7 +12,7 @@ body {
   flex-wrap: wrap;
   width: 350px;
   border-radius: 4px;
-  background-color: white;
+  background-color: rgb(252, 252, 252);
   margin-top: 20px;
   justify-content: center;
   align-items: center;
@@ -22,6 +22,7 @@ body {
   width: 270px;
   text-align: center;
   font-size: 2rem;
+  user-select: none;
 }
 .drum-pad {
   border: 2px solid rgb(36, 35, 35);
@@ -29,7 +30,7 @@ body {
   display: flex;
   font-size: 30px;
   height: 70px;
-  background-color: blueviolet;
+  background-color: rgb(144, 65, 218);
   align-items: center;
   justify-content: center;
   width: 70px;
