--- a/src/App.css
+++ b/src/App.css
@@ -23,12 +23,14 @@ body {
   text-align: center;
   font-size: 2rem;
   user-select: none;
+  font-style: oblique;
 }
 .drum-pad {
   border: 2px solid rgb(36, 35, 35);
   border-radius: 5px;
   display: flex;
   font-size: 30px;
+  font-style: oblique;
   height: 70px;
   background-color: rgb(144, 65, 218);
   align-items: center;
